cropped image to correct size

--- a/astro-blog/public/styles.css
+++ b/astro-blog/public/styles.css
@@ -1524,7 +1524,9 @@ pre code {
 .post-thumbnail img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    display: block;
+    object-fit: contain;
+    object-position: center;
 }
 
 .post-content {
